# hybot

./: .gitignore  README.md  README.zh-CN.md  config.yaml  pyproject.toml  test_weather_skill.py
.hybot/: config.yaml
skills/fetch_markdown/: SKILL.md  __init__.py  skill.py
skills/fetch_markdown/scripts/: fetch_markdown.py
skills/fetch_markdown/src/: fetch_markdown_impl.py
skills/weather/: README.md  __init__.py  skill.yaml  weather_skill.py
src/hybot/: __init__.py  __main__.py  agent.py  commands.py  config.py  conversation_log.py  lifecycle.py  memory.py  project_scanner.py  schemas.py  subagent.py
src/hybot/default_skills/skill-creator/: SKILL.md
src/hybot/default_skills/skill-creator/references/: skill-template.md
src/hybot/default_skills/skill-creator/scripts/: validate_skill.py
src/hybot/tools/: __init__.py  git_tools.py  guarded_coding.py
